сделал бэкграунд героя и портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,13 +35,19 @@
         </nav>
         <ul class="menu list">
           <li class="menu-item">
-            <a href="mailto:info@devstudio.com" class="contact-list"
-              >info@devstudio.com</a
+            <a href="mailto:info@devstudio.com" class="contact-list">
+              <svg class="adress-icon" width="16px" height="12px">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="menu-item">
             <a href="tel:+380961111111" class="contact-list"
-              >+38 096 111 11 11</a
+              ><svg class="adress-icon" width="10px" height="16px">
+                <use href="./images/sprite.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -72,134 +78,211 @@
           </ul>
           <ul class="list portfolio-list">
             <li class="portfolio-element">
-              <img
-                src="./images/portfolio/img1.jpg"
-                alt="Ноутбук с сайтом"
-                width="370"
-              />
-              <div class="text-container">
-                <h2 class="portfolio-title">Технокряк</h2>
-                <p class="portfolio-text">Веб-сайт</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/portfolio/img1.jpg"
+                  alt="Ноутбук с сайтом"
+                  width="370"
+                />
+                <div class="text-container">
+                  <h2 class="portfolio-title">Технокряк</h2>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div></a
+              >
             </li>
 
             <li class="portfolio-element">
-              <img
-                src="./images/portfolio/img2.jpg"
-                alt="Игра в баскетбол"
-                width="370"
-              />
-              <div class="text-container">
-                <h2 class="portfolio-title">
-                  Постер New Orlean vs Golden Star
-                </h2>
-                <p class="portfolio-text">Дизайн</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/portfolio/img2.jpg"
+                  alt="Игра в баскетбол"
+                  width="370"
+                />
+                <div class="text-container">
+                  <h2 class="portfolio-title">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="portfolio-text">Дизайн</p>
+                </div></a
+              >
             </li>
 
             <li class="portfolio-element">
-              <img
-                src="./images/portfolio/img3.jpg"
-                alt="Логотип ресторана"
-                width="370"
-              />
-              <div class="text-container">
-                <h2>Ресторан Seafood</h2>
-                <p class="portfolio-text">Приложение</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/portfolio/img3.jpg"
+                  alt="Логотип ресторана"
+                  width="370"
+                />
+                <div class="text-container">
+                  <h2 class="portfolio-title">Ресторан Seafood</h2>
+                  <p class="portfolio-text">Приложение</p>
+                </div></a
+              >
             </li>
 
             <li class="portfolio-element">
-              <img
-                src="./images/portfolio/img4.jpg"
-                alt="Наушники"
-                width="370"
-              />
-              <div class="text-container">
-                <h2 class="portfolio-title">Проект Prime</h2>
-                <p class="portfolio-text">Маркетинг</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/portfolio/img4.jpg"
+                  alt="Наушники"
+                  width="370"
+                />
+                <div class="text-container">
+                  <h2 class="portfolio-title">Проект Prime</h2>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div></a
+              >
             </li>
 
             <li class="portfolio-element">
-              <img
-                src="./images/portfolio/img5.jpg"
-                alt="Коробки"
-                width="370"
-              />
-              <div class="text-container">
-                <h2 class="portfolio-title">Проект Boxes</h2>
-                <p class="portfolio-text">Приложение</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/portfolio/img5.jpg"
+                  alt="Коробки"
+                  width="370"
+                />
+                <div class="text-container">
+                  <h2 class="portfolio-title">Проект Boxes</h2>
+                  <p class="portfolio-text">Приложение</p>
+                </div></a
+              >
             </li>
 
             <li class="portfolio-element">
-              <img
-                src="./images/portfolio/img6.jpg"
-                alt="Монитор с сайтом"
-                width="370"
-              />
-              <div class="text-container">
-                <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                <p class="portfolio-text">Веб-сайт</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/portfolio/img6.jpg"
+                  alt="Монитор с сайтом"
+                  width="370"
+                />
+                <div class="text-container">
+                  <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div></a
+              >
             </li>
 
             <li class="portfolio-element">
-              <img src="./images/portfolio/img7.jpg" alt="Книга" width="370" />
-              <div class="text-container">
-                <h2 class="portfolio-title">Издание Limited Edition</h2>
-                <p class="portfolio-text">Дизайн</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/portfolio/img7.jpg"
+                  alt="Книга"
+                  width="370"
+                />
+                <div class="text-container">
+                  <h2 class="portfolio-title">Издание Limited Edition</h2>
+                  <p class="portfolio-text">Дизайн</p>
+                </div></a
+              >
             </li>
 
             <li class="portfolio-element">
-              <img
-                src="./images/portfolio/img8.jpg"
-                alt="Этикетка"
-                width="370"
-              />
-              <div class="text-container">
-                <h2 class="portfolio-title">Проект LAB</h2>
-                <p class="portfolio-text">Маркетинг</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/portfolio/img8.jpg"
+                  alt="Этикетка"
+                  width="370"
+                />
+                <div class="text-container">
+                  <h2 class="portfolio-title">Проект LAB</h2>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div></a
+              >
             </li>
 
             <li class="portfolio-element">
-              <img
-                src="./images/portfolio/img9.jpg"
-                alt="Ноутбук"
-                width="370"
-              />
-              <div class="text-container">
-                <h2 class="portfolio-title">Growing Business</h2>
-                <p class="portfolio-text">Приложение</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/portfolio/img9.jpg"
+                  alt="Ноутбук"
+                  width="370"
+                />
+                <div class="text-container">
+                  <h2 class="portfolio-title">Growing Business</h2>
+                  <p class="portfolio-text">Приложение</p>
+                </div></a
+              >
             </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer-bcg">
-      <div class="container">
-        <a href="./index.html" class="footer-logo"
-          ><span class="logo-item">Web</span>Studio</a
-        >
-        <address class="address">
-          <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
-          <ul class="list">
-            <li class="footer-list-item">
-              <a href="mailto:info@devstudio.com" class="footer-contacts"
-                >info@devstudio.com</a
+      <div class="container footer-container">
+        <div>
+          <a href="./index.html" class="footer-logo"
+            ><span class="logo-item">Web</span>Studio</a
+          >
+          <address class="address">
+            <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul class="list">
+              <li class="footer-list-item">
+                <a href="mailto:info@devstudio.com" class="footer-contacts"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+380961111111" class="footer-contacts"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-socials">
+          <p class="footer-socials-text">ПРИСОЕДИНЯЙТЕСЬ</p>
+          <ul class="footer-socials-icons">
+            <li class="footer-socials-icons-item">
+              <a
+                class="footer-socials-icons-link"
+                href=""
+                target="_blank"
+                rel="noonpener noreferer"
               >
+                <svg class="footer-socials-icons-svg">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a href="tel:+380961111111" class="footer-contacts"
-                >+38 096 111 11 11</a
+            <li class="soc-icons-item">
+              <a
+                class="footer-socials-icons-link"
+                href=""
+                target="_blank"
+                rel="noonpener noreferer"
               >
+                <svg class="footer-socials-icons-svg">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-icons-item">
+              <a
+                class="footer-socials-icons-link"
+                href=""
+                target="_blank"
+                rel="noonpener noreferer"
+              >
+                <svg class="footer-socials-icons-svg">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-icons-item">
+              <a
+                class="footer-socials-icons-link"
+                href=""
+                target="_blank"
+                rel="noonpener noreferer"
+              >
+                <svg class="footer-socials-icons-svg">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
