--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
     </header>
     <main>
-      <section class="section hero">
+      <section class="section hero overlay">
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="button">Заказать услугу</button>
