поставил размер свг в html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <ul class="list list-container">
             <li class="list-item">
               <div class="icon-box">
-                <svg class="adv-icon">
+                <svg class="adv-icon" width="70px" height="70px">
                   <use href="./images/sprite.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -78,7 +78,7 @@
             </li>
             <li class="list-item">
               <div class="icon-box">
-                <svg class="adv-icon">
+                <svg class="adv-icon" width="70px" height="70px">
                   <use href="./images/sprite.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -90,7 +90,7 @@
             </li>
             <li class="list-item">
               <div class="icon-box">
-                <svg class="adv-icon">
+                <svg class="adv-icon" width="70px" height="70px">
                   <use href="./images/sprite.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -102,7 +102,7 @@
             </li>
             <li class="list-item">
               <div class="icon-box">
-                <svg class="adv-icon">
+                <svg class="adv-icon" width="70px" height="70px">
                   <use href="./images/sprite.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -159,11 +159,13 @@
                   <li class="soc-icons-item">
                     <a
                       class="soc-icons-link"
+                      width="70px"
+                      height="70px"
                       href=""
                       target="_blank"
                       rel="noonpener noreferer"
                     >
-                      <svg class="soc-icons-svg">
+                      <svg class="soc-icons-svg" width="20px" height="20px">
                         <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -175,7 +177,7 @@
                       target="_blank"
                       rel="noonpener noreferer"
                     >
-                      <svg class="soc-icons-svg">
+                      <svg class="soc-icons-svg" width="20px" height="20px">
                         <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -187,7 +189,7 @@
                       target="_blank"
                       rel="noonpener noreferer"
                     >
-                      <svg class="soc-icons-svg">
+                      <svg class="soc-icons-svg" width="20px" height="20px">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -199,7 +201,7 @@
                       target="_blank"
                       rel="noonpener noreferer"
                     >
-                      <svg class="soc-icons-svg">
+                      <svg class="soc-icons-svg" width="20px" height="20px">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -220,7 +222,7 @@
                       target="_blank"
                       rel="noonpener noreferer"
                     >
-                      <svg class="soc-icons-svg">
+                      <svg class="soc-icons-svg" width="20px" height="20px">
                         <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -232,7 +234,7 @@
                       target="_blank"
                       rel="noonpener noreferer"
                     >
-                      <svg class="soc-icons-svg">
+                      <svg class="soc-icons-svg" width="20px" height="20px">
                         <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -244,7 +246,7 @@
                       target="_blank"
                       rel="noonpener noreferer"
                     >
-                      <svg class="soc-icons-svg">
+                      <svg class="soc-icons-svg" width="20px" height="20px">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -256,7 +258,7 @@
                       target="_blank"
                       rel="noonpener noreferer"
                     >
-                      <svg class="soc-icons-svg">
+                      <svg class="soc-icons-svg" width="20px" height="20px">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -277,7 +279,7 @@
                       target="_blank"
                       rel="noonpener noreferer"
                     >
-                      <svg class="soc-icons-svg">
+                      <svg class="soc-icons-svg" width="20px" height="20px">
                         <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -289,7 +291,7 @@
                       target="_blank"
                       rel="noonpener noreferer"
                     >
-                      <svg class="soc-icons-svg">
+                      <svg class="soc-icons-svg" width="20px" height="20px">
                         <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -301,7 +303,7 @@
                       target="_blank"
                       rel="noonpener noreferer"
                     >
-                      <svg class="soc-icons-svg">
+                      <svg class="soc-icons-svg" width="20px" height="20px">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -313,7 +315,7 @@
                       target="_blank"
                       rel="noonpener noreferer"
                     >
-                      <svg class="soc-icons-svg">
+                      <svg class="soc-icons-svg" width="20px" height="20px">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -334,7 +336,7 @@
                       target="_blank"
                       rel="noonpener noreferer"
                     >
-                      <svg class="soc-icons-svg">
+                      <svg class="soc-icons-svg" width="20px" height="20px">
                         <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -346,7 +348,7 @@
                       target="_blank"
                       rel="noonpener noreferer"
                     >
-                      <svg class="soc-icons-svg">
+                      <svg class="soc-icons-svg" width="20px" height="20px">
                         <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -358,7 +360,7 @@
                       target="_blank"
                       rel="noonpener noreferer"
                     >
-                      <svg class="soc-icons-svg">
+                      <svg class="soc-icons-svg" width="20px" height="20px">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -370,7 +372,7 @@
                       target="_blank"
                       rel="noonpener noreferer"
                     >
-                      <svg class="soc-icons-svg">
+                      <svg class="soc-icons-svg" width="20px" height="20px">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -386,14 +388,15 @@
           <h2 class="title">Постоянные клиенты</h2>
           <ul class="list client-list">
             <li>
+              <!-- prettier-ignore -->
               <a class="client-link" href=""
-                ><svg class="client-icon">
+
+                ><svg class="client-icon" width="170px" height="90px">
                   <use
                     href="./images/sprite.svg#icon-logo1"
                     target="_blank"
                     rel="noonpener noreferer"
-                  ></use></svg
-              ></a>
+                  ></use></svg></a>
             </li>
             <li>
               <a
@@ -401,9 +404,10 @@
                 href=""
                 target="_blank"
                 rel="noonpener noreferer"
-                ><svg class="client-icon">
-                  <use href="./images/sprite.svg#icon-logo2"></use></svg
-              ></a>
+                ><svg class="client-icon" width="170px" height="90px">
+                  <use href="./images/sprite.svg#icon-logo2"></use>
+                </svg>
+              </a>
             </li>
             <li>
               <a
@@ -411,9 +415,10 @@
                 href=""
                 target="_blank"
                 rel="noonpener noreferer"
-                ><svg class="client-icon">
-                  <use href="./images/sprite.svg#icon-logo3"></use></svg
-              ></a>
+                ><svg class="client-icon" width="170px" height="90px">
+                  <use href="./images/sprite.svg#icon-logo3"></use>
+                </svg>
+              </a>
             </li>
             <li>
               <a
@@ -421,9 +426,10 @@
                 href=""
                 target="_blank"
                 rel="noonpener noreferer"
-                ><svg class="client-icon">
-                  <use href="./images/sprite.svg#icon-logo4"></use></svg
-              ></a>
+                ><svg class="client-icon" width="170px" height="90px">
+                  <use href="./images/sprite.svg#icon-logo4"></use>
+                </svg>
+              </a>
             </li>
             <li>
               <a
@@ -431,9 +437,10 @@
                 href=""
                 target="_blank"
                 rel="noonpener noreferer"
-                ><svg class="client-icon">
-                  <use href="./images/sprite.svg#icon-logo5"></use></svg
-              ></a>
+                ><svg class="client-icon" width="170px" height="90px">
+                  <use href="./images/sprite.svg#icon-logo5"></use>
+                </svg>
+              </a>
             </li>
             <li>
               <a
@@ -441,9 +448,10 @@
                 href=""
                 target="_blank"
                 rel="noonpener noreferer"
-                ><svg class="client-icon">
-                  <use href="./images/sprite.svg#icon-logo6"></use></svg
-              ></a>
+                ><svg class="client-icon" width="170px" height="90px">
+                  <use href="./images/sprite.svg#icon-logo6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -481,7 +489,11 @@
                 target="_blank"
                 rel="noonpener noreferer"
               >
-                <svg class="footer-socials-icons-svg">
+                <svg
+                  class="footer-socials-icons-svg"
+                  width="20px"
+                  height="20px"
+                >
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
@@ -493,7 +505,11 @@
                 target="_blank"
                 rel="noonpener noreferer"
               >
-                <svg class="footer-socials-icons-svg">
+                <svg
+                  class="footer-socials-icons-svg"
+                  width="20px"
+                  height="20px"
+                >
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
@@ -505,7 +521,11 @@
                 target="_blank"
                 rel="noonpener noreferer"
               >
-                <svg class="footer-socials-icons-svg">
+                <svg
+                  class="footer-socials-icons-svg"
+                  width="20px"
+                  height="20px"
+                >
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
@@ -517,7 +537,11 @@
                 target="_blank"
                 rel="noonpener noreferer"
               >
-                <svg class="footer-socials-icons-svg">
+                <svg
+                  class="footer-socials-icons-svg"
+                  width="20px"
+                  height="20px"
+                >
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
               </a>
