--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
       <section class="section hero overlay">
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="button">Заказать услугу</button>
+          <button type="button" class="button" data-modal-open>
+            Заказать услугу
+          </button>
         </div>
       </section>
       <section class="section adv-section">
@@ -120,24 +122,39 @@
           <h2 class="title">Чем мы занимаемся</h2>
           <ul class="list list-container">
             <li class="list-item">
-              <img
-                src="./images/img1.jpg"
-                alt="Человек работает с кодом"
-                width="370"
-              />
+              <div class="development-thumb">
+                <img
+                  src="./images/img1.jpg"
+                  alt="Человек работает с кодом"
+                  width="370"
+                />
+                <div class="development-title">
+                  <h3 class="sub-title">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</h3>
+                </div>
+              </div>
             </li>
             <li class="list-item">
-              <img
-                src="./images/img2.jpg"
-                alt="Человек работает со стилями"
-                width="370"
-              />
+              <div class="development-thumb">
+                <img
+                  src="./images/img2.jpg"
+                  alt="Человек работает со стилями"
+                  width="370"
+                />
+                <div class="development-title">
+                  <h3 class="sub-title">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</h3>
+                </div>
+              </div>
             </li>
             <li class="list-item">
-              <img
-                src="./images/img3.jpg"
-                alt="Человек работает выбирает цвет"
-              />
+              <div class="development-thumb">
+                <img
+                  src="./images/img3.jpg"
+                  alt="Человек работает выбирает цвет"
+                />
+                <div class="development-title">
+                  <h3 class="sub-title">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</h3>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
@@ -549,5 +566,11 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-btn-close" data-modal-close>X</button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
